--- a/src/registrar/templates/application_other_contacts.html
+++ b/src/registrar/templates/application_other_contacts.html
@@ -11,6 +11,7 @@
 <form class="usa-form usa-form--large" id="step__{{steps.current}}" method="post" novalidate>
   {% csrf_token %}
   {{ forms.0.management_form }}
+  {# forms.0 is a formset and this iterates over its forms #}
   {% for form in forms.0.forms %}
     <fieldset class="usa-fieldset">
       <legend>
