--- a/src/registrar/templates/application_review.html
+++ b/src/registrar/templates/application_review.html
@@ -1,10 +1,9 @@
-<!-- Test page -->
 {% extends 'application_form.html' %}
 {% load static widget_tweaks namespaced_urls %}
 
 {% block form_content %}
 
-<form id="step__{{steps.current}}" class="usa-form usa-form--large" method="post">
+<form id="step__{{steps.current}}" class="usa-form usa-form--large" method="post" novalidate>
   {% csrf_token %}
 
   {% for step in steps.all|slice:":-1" %}
