--- a/src/registrar/templates/application_current_sites.html
+++ b/src/registrar/templates/application_current_sites.html
@@ -1,14 +1,28 @@
-<!-- Test page -->
 {% extends 'application_form.html' %}
 {% load widget_tweaks field_helpers %}
 {% load static %}
 
 {% block form_content %}
 
-<form class="usa-form usa-form--large" id="step__{{steps.current}}" method="post">
+<form id="step__{{steps.current}}" class="usa-form usa-form--large" method="post" novalidate>
   {% csrf_token %}
+  <div>
+    {{ forms.0.management_form }}
+    {# TODO: aria-describedby to associate these instructions with the input! #}
+    <p id="website_instructions">
+      Enter your organization’s public website, if you have one. For example, www.city.com.
+    </p>
+    {% for form in forms.0 %}
+      {% input_with_errors form.website %}
+    {% endfor %}
 
-  {% input_with_errors forms.0.current_site %}
+    <button type="submit" name="submit_button" value="save" class="usa-button usa-button--unstyled">
+      <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24" height="24">
+        <use xlink:href="{%static 'img/sprite.svg'%}#add_circle"></use>
+      </svg><span class="margin-left-05">Add another site</span>
+    </button>
+  </div>
+  <div>
 
   {{ block.super }}
 
