Change next and save button text

--- a/src/registrar/templates/application_form.html
+++ b/src/registrar/templates/application_form.html
@@ -49,7 +49,7 @@
             name="submit_button"
             value="next"
             class="usa-button"
-          >Next</button>
+          >Save and continue</button>
           {% else %}
           <button
             type="submit"
@@ -61,7 +61,7 @@
             name="submit_button"
             value="save"
             class="usa-button usa-button--outline"
-          >Save</button>
+          >Save progress</button>
         </div>
 
       </main>
