--- a/src/registrar/templates/includes/required_fields.html
+++ b/src/registrar/templates/includes/required_fields.html
@@ -1,3 +1,3 @@
-  <p>
+  <p class="margin-top-3">
     Required fields are marked with an asterisk (<abbr class="usa-hint usa-hint--required" title="required">*</abbr>).
   </p>
