--- a/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
+++ b/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
@@ -19,6 +19,8 @@ i.e.
 @include u-padding-right('05');
 ----------------------------------------
 */
+// USWDS tokens are a bit too coarse in their letter-spacing steps
+$letter-space--xs: .0125em; 
 
 @use "uswds-core" as *;
 
@@ -41,6 +43,13 @@ i.e.
     margin-top: units(2);
   }
  }
+ 
+.register-form-step h3 {
+  color: color('primary-dark');
+  letter-spacing: $letter-space--xs;
+  margin-top: units(3);
+  margin-bottom: 0;
+}
 
 .register-form-step p {
   @include typeset('sans', 'sm', 5);
@@ -90,6 +99,10 @@ a.breadcrumb__back {
 
 .stepnav {
   margin-top: units(2);
+}
+
+.ao_example p {
+  margin-top: units(1);
 }
 
 .review__step__name {
