--- a/src/registrar/templates/application_review.html
+++ b/src/registrar/templates/application_review.html
@@ -17,6 +17,11 @@
           {% if step == Step.ORGANIZATION_TYPE %}
             {{ application.get_organization_type_display|default:"Incomplete" }}
           {% endif %}
+          {% if step == Step.TRIBAL_GOVERNMENT %}
+            {{ application.tribe_name|default:"Incomplete" }}
+            {% if application.federally_recognized_tribe %}<p>Federally-recognized tribe</p>{% endif %}
+            {% if application.state_recognized_tribe %}<p>State-recognized tribe</p>{% endif %}
+          {% endif %}
           {% if step == Step.ORGANIZATION_FEDERAL %}
             {{ application.get_federal_type_display|default:"Incomplete" }}
           {% endif %}
