Address PR comment: replace abbreviations

--- a/src/registrar/templates/includes/ao_example__exec.html
+++ b/src/registrar/templates/includes/ao_example__exec.html
@@ -1,3 +1,3 @@
-<p>Domain requests from executive branch agencies must be authorized by <strong>CIOs</strong> or <strong>agency heads</strong>.</p>
+<p>Domain requests from executive branch agencies must be authorized by <strong>Chief Information Officers</strong> or <strong>agency heads</strong>.</p>
 <p>Domain requests from executive branch agencies are subject to guidance issued by the U.S. Office of Management and Budget. </p>
 
