--- a/src/registrar/templates/includes/ao_example__state-territory.html
+++ b/src/registrar/templates/includes/ao_example__state-territory.html
@@ -1,5 +1,4 @@
 <h3>States and territories: executive branch</h3>
-<p>Domain requests from states and territories must be authorized by the <strong>governor</strong> or the <strong>state CIO.</strong></p>
+<p>Domain requests from states and territories must be authorized by the <strong>governor</strong> or the <strong>state Chief Information Officer.</strong></p>
 <h3>States and territories: judicial and legislative branches</h3>
-<p>Domain requests from state legislatures and courts must be authorized by an agency’s <strong>CIO</strong> or <strong>highest-ranking executive</strong>.</p>
-
+<p>Domain requests from state legislatures and courts must be authorized by an agency’s <strong>Chief Information Officer</strong> or <strong>highest-ranking executive</strong>.</p>
