--- a/src/registrar/templates/includes/ao_example__interstate.html
+++ b/src/registrar/templates/includes/ao_example__interstate.html
@@ -1,2 +1,2 @@
-<p>Domain requests from interstate organizations must be authorized by the <strong>highest-ranking executive</strong> (president, director, chair, or equivalent) or <strong>one of the state’s governors or CIOs.</strong></p>
+<p>Domain requests from interstate organizations must be authorized by the <strong>highest-ranking executive</strong> (president, director, chair, or equivalent) or <strong>one of the state’s governors or Chief Information Officers.</strong></p>
 
