--- a/src/registrar/templates/includes/ao_example__legislative.html
+++ b/src/registrar/templates/includes/ao_example__legislative.html
@@ -5,6 +5,6 @@
 <p class="">Domain requests from the U.S. House of Representatives must come from the <strong>House Chief Administrative Officer.</strong>
 
 <h3> Other legislative branch agencies </h3>
-<p class="margin-top-1">Domain requests from legislative branch agencies must come from the <strong>agency’s head</strong> or <strong>CIO.</strong></p>
-<p class="margin-top-1">Domain requests from legislative commissions must come from the <strong>head of the commission</strong>, or the <strong>head or CIO of the parent agency,</strong> if there is one.
+<p class="margin-top-1">Domain requests from legislative branch agencies must come from the <strong>agency’s head</strong> or <strong>Chief Information Officer.</strong></p>
+<p class="margin-top-1">Domain requests from legislative commissions must come from the <strong>head of the commission</strong>, or the <strong>head or Chief Information Officer of the parent agency,</strong> if there is one.
 </p>
