--- a/src/registrar/templates/includes/ao_example__special-district.html
+++ b/src/registrar/templates/includes/ao_example__special-district.html
@@ -1,2 +1,2 @@
-<p>Domain requests from special districts must be authorized by the <strong>highest-ranking executive (president, director, chair, or equivalent)</strong> or <strong>state CIOs for state-based organizations</strong>.</p>
+<p>Domain requests from special districts must be authorized by the <strong>highest-ranking executive (president, director, chair, or equivalent)</strong> or <strong>state Chief Information Officers for state-based organizations</strong>.</p>
 
