Change bolded text in city example

--- a/src/registrar/templates/includes/ao_example__city.html
+++ b/src/registrar/templates/includes/ao_example__city.html
@@ -1,1 +1,1 @@
-<p>Domain requests from <strong>cities</strong> must be authorized by the mayor or the equivalent highest elected official.</p>
+<p>Domain requests from cities must be authorized by <strong>the mayor</strong> or the equivalent <strong>highest elected official.</strong></p>
