Update include file path in the dotgov domain page template

--- a/src/registrar/templates/application_dotgov_domain.html
+++ b/src/registrar/templates/application_dotgov_domain.html
@@ -18,7 +18,7 @@
 
   <p>Here are a few domain examples for your type of organization.</p>
   <div class="domain-example">
-    {% include "includes/domain_example__city.html" %}
+    {% include "includes/domain_example.html" %}
   </div>
 
 <form id="step__{{steps.current}}" class="usa-form usa-form--large" method="post" novalidate>
