--- a/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
+++ b/src/registrar/assets/sass/_theme/_uswds-theme-custom-styles.scss
@@ -29,9 +29,14 @@ $letter-space--xs: .0125em;
    @include sr-only;
  }
 
+ * {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
  h1 {
   @include typeset('sans', '2xl', 2);
-  margin: 0 0 units(1);
+  margin: 0 0 units(2);
  }
 
  h2 {
@@ -43,7 +48,7 @@ $letter-space--xs: .0125em;
     margin-top: units(2);
   }
  }
- 
+
 .register-form-step h3 {
   color: color('primary-dark');
   letter-spacing: $letter-space--xs;
@@ -92,9 +97,9 @@ a.breadcrumb__back {
     .usa-icon {
        flex-shrink: 0;
        //align lock body to x-height
-       margin: units('2px') units(1) 0 0; 
+       margin: units('2px') units(1) 0 0;
     }
-  }  
+  }
 }
 
 .stepnav {
@@ -109,10 +114,40 @@ a.breadcrumb__back {
   font-weight: font-weight('semibold');
 }
 
-footer {
-  //Workaround because USWDS units jump from 10 to 15
-  margin-top: units(10) + units(2);
+section.dashboard {
+  background-color: color('white');
+  border: 1px solid color('base-lighter');
+  border-radius: 4px;
+  padding: 0 units(2) units(3);
+  margin-top: units(5);
+
+  h2 {
+    padding-bottom: units(3);
+  }
+
+  p {
+    margin-bottom: 0;
+  }
 }
+
+#wrapper {
+  background-color: color('primary-lightest');
+}
+
+main {
+  //Workaround because USWDS units jump from 10 to 15
+  padding-bottom: units(10) + units(2);
+  padding-top: units(5);
+}
+
+footer {
+  border-top: 1px solid color('primary-darker');
+}
+
+.usa-footer__secondary-section {
+  background-color: color('primary-lightest');
+}
+
 
 abbr[title] {
   // workaround for underlining abbr element
