--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block title %} Hello {% endblock %}
 
 {% block content %}
@@ -30,19 +32,36 @@
   <caption class="sr-only">Your domain applications</caption>
   <thead>
     <tr>
-    <th>Name</th>
-    <th>Status</th>
+    <th data-sortable scope="col" role="columnheader">Domain name</th>
+	<th data-sortable scope="col" role="columnheader">Date created</th>
+    <th data-sortable scope="col" role="columnheader">Status</th>
+    <th></th>
     </tr>
   </thead>
   <tbody>
     {% for application in domain_applications %}
     <tr>
-      <th>
-      <a href="{% url 'edit-application' application.pk %}">
+      <th th scope="row" role="rowheader">
         {{ application.requested_domain.name|default:"New domain request" }}
-      </a>
       </th>
-      <td>{{ application.status }}</td>
+      <td data-sort-value="{{ application.created_at|date:"U" }}">{{ application.created_at|date }}</td>
+      <td>{{ application.status|title }}</td>
+      <td>
+        <a href="{% url 'edit-application' application.pk %}">
+		{% if application.status == "started" %}
+          <svg class="usa-icon" aria-hidden="true" focusable="false" role="img">
+          <use xlink:href="{%static 'img/sprite.svg'%}#edit"></use>
+          </svg>
+		  Edit
+
+		{% else %}
+          <svg class="usa-icon" aria-hidden="true" focusable="false" role="img">
+          <use xlink:href="{%static 'img/sprite.svg'%}#settings"></use>
+          </svg>
+		  Manage
+		{% endif %}
+      </a>
+	  </td>
     </tr>
     {% endfor %}
   </tbody>
