Use a default for empty domain name
Co-authored-by: Seamus Johnston <seamus.johnston@gsa.gov>

--- a/src/registrar/templates/home.html
+++ b/src/registrar/templates/home.html
@@ -52,7 +52,7 @@
               <svg class="usa-icon" aria-hidden="true" focusable="false" role="img">
                 <use xlink:href="{%static 'img/sprite.svg'%}#edit"></use>
               </svg>
-              Edit <span class="usa-sr-only">{{application.requested_domain.name}} </span>
+              Edit <span class="usa-sr-only">{{ application.requested_domain.name|default:"New domain request" }} </span>
 
               {% else %}
               <svg class="usa-icon" aria-hidden="true" focusable="false" role="img">
