Adjust spacing and sizing to match figma closer

--- a/src/registrar/templates/application_dotgov_domain.html
+++ b/src/registrar/templates/application_dotgov_domain.html
@@ -17,7 +17,7 @@
   <p>We’ll try to give you the domain you want. We first need to make sure your request meets our requirements. We’ll work with you to find the best domain for your organization.</p>
 
   <p>Here are a few domain examples for your type of organization.</p>
-  <div class="domain-example">
+  <div class="domain_example">
     {% include "includes/domain_example.html" %}
   </div>
 </div>
