--- a/src/registrar/templates/application_org_federal.html
+++ b/src/registrar/templates/application_org_federal.html
@@ -9,7 +9,7 @@
   <fieldset id="federal_type__fieldset" class="usa-fieldset">
     <legend>
         <h2>Which federal branch is your organization in?</h2>
-        <p class="margin-bottom-5">This question is required.</p>
+        <p>This question is required.</p>
     </legend>
     {% radio_buttons_by_value forms.0.federal_type as choices %}
     {% for choice in choices.values %}
