--- a/src/registrar/templates/application_review.html
+++ b/src/registrar/templates/application_review.html
@@ -7,7 +7,7 @@
   {% csrf_token %}
 
   {% for step in steps.all|slice:":-1" %}
-  <section class="review__step margin-top-205">
+  <section class="review__step">
     <hr />
     <div class="review__step__title display-flex flex-justify"> 
       <div class="review__step__value">
