Change header and footer to closer match to get.gov, alignment adjustment

--- a/src/registrar/templates/base.html
+++ b/src/registrar/templates/base.html
@@ -129,11 +129,7 @@
         {% block logo %}
         <div class="usa-logo" id="extended-logo">
            <a href="{% url 'home' %}">
-           <img
-                src="{% static 'img/dottedgov-round.svg' %}"
-                alt="Home"
-                width="48px"
-              />
+           <strong class="usa-logo__text" >.gov </strong>
            </a>
         </div>
         {% endblock %}
